# friggma

./: .gitignore  LICENSE  README.md  pyproject.toml
friggma/: __init__.py  analyzer.py  cli.py
friggma/templates/: index.html  vite.config.ts
