[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "friggma"
version = "0.1.0"
description = "Set up Figma Make projects with Tailwind v4"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
frig = "friggma.cli:main"

[tool.setuptools.package-data]
friggma = ["templates/**/*"]